--- a/Anamnese/Views/PacienteModels/Details.cshtml
+++ b/Anamnese/Views/PacienteModels/Details.cshtml
@@ -5,123 +5,125 @@
     var idPaciente = Model.IdPaciente;
 }
 
-<h1>Detalhes do paciente</h1>
+<h1 class="text-center">Detalhes do paciente</h1>
 
 <div>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.NomePaciente)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.NomePaciente)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SobrenomePaciente)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SobrenomePaciente)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DataNascimentoPaciente)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DataNascimentoPaciente)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.GeneroPaciente)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.GeneroPaciente)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CpfPaciente)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CpfPaciente)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.RgPaciente)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.RgPaciente)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CertidaoPaciente)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CertidaoPaciente)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.NaturalidadePaciente)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.NaturalidadePaciente)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TelefonePaciente)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TelefonePaciente)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CelularPaciente)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CelularPaciente)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.EstadoCivilPaciente)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.EstadoCivilPaciente)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CepPaciente)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CepPaciente)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.LogradouroPaciente)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.LogradouroPaciente)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.NumeroEnderecoPaciente)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.NumeroEnderecoPaciente)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.BairroPaciente)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.BairroPaciente)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CidadePaciente)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CidadePaciente)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.EstadoPaciente)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.EstadoPaciente)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DataCadastroPaciente)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DataCadastroPaciente)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-controller="AnamneseModels" asp-action="Index" asp-route-idPaciente="@idPaciente">Ver anamneses</a> | 
-    <a asp-action="Edit" asp-route-id="@Model?.IdPaciente">Editar</a> |
-    <a asp-action="Index">Voltar</a>
-</div>
+    <div class="justify-content-center align-items-center">
+        <dl class="row">
+            <dt class="col-sm-3 font-weight-bold text-primary">
+                @Html.DisplayNameFor(model => model.NomeCompletoPaciente)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.NomeCompletoPaciente)
+            </dd>
+            <dt class="col-sm-3 font-weight-bold text-primary">
+                @Html.DisplayNameFor(model => model.DataNascimentoPaciente)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.DataNascimentoPaciente)
+            </dd>
+            <dt class="col-sm-3 font-weight-bold text-primary">
+                @Html.DisplayNameFor(model => model.GeneroPaciente)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.GeneroPaciente)
+            </dd>
+            <dt class="col-sm-3 font-weight-bold text-primary">
+                @Html.DisplayNameFor(model => model.CpfPaciente)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.CpfPaciente)
+            </dd>
+            <dt class="col-sm-3 font-weight-bold text-primary">
+                @Html.DisplayNameFor(model => model.RgPaciente)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.RgPaciente)
+            </dd>
+            <dt class="col-sm-3 font-weight-bold text-primary">
+                @Html.DisplayNameFor(model => model.CertidaoPaciente)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.CertidaoPaciente)
+            </dd>
+            <dt class="col-sm-3 font-weight-bold text-primary">
+                @Html.DisplayNameFor(model => model.NaturalidadePaciente)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.NaturalidadePaciente)
+            </dd>
+            <dt class="col-sm-3 font-weight-bold text-primary">
+                @Html.DisplayNameFor(model => model.TelefonePaciente)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.TelefonePaciente)
+            </dd>
+            <dt class="col-sm-3 font-weight-bold text-primary">
+                @Html.DisplayNameFor(model => model.CelularPaciente)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.CelularPaciente)
+            </dd>
+            <dt class="col-sm-3 font-weight-bold text-primary">
+                @Html.DisplayNameFor(model => model.EstadoCivilPaciente)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.EstadoCivilPaciente)
+            </dd>
+            <dt class="col-sm-3 font-weight-bold text-primary">
+                @Html.DisplayNameFor(model => model.CepPaciente)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.CepPaciente)
+            </dd>
+            <dt class="col-sm-3 font-weight-bold text-primary">
+                @Html.DisplayNameFor(model => model.LogradouroPaciente)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.LogradouroPaciente)
+            </dd>
+            <dt class="col-sm-3 font-weight-bold text-primary">
+                @Html.DisplayNameFor(model => model.NumeroEnderecoPaciente)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.NumeroEnderecoPaciente)
+            </dd>
+            <dt class="col-sm-3 font-weight-bold text-primary">
+                @Html.DisplayNameFor(model => model.BairroPaciente)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.BairroPaciente)
+            </dd>
+            <dt class="col-sm-3 font-weight-bold text-primary">
+                @Html.DisplayNameFor(model => model.CidadePaciente)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.CidadePaciente)
+            </dd>
+            <dt class="col-sm-3 font-weight-bold text-primary">
+                @Html.DisplayNameFor(model => model.EstadoPaciente)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.EstadoPaciente)
+            </dd>
+            <dt class="col-sm-3 font-weight-bold text-primary">
+                @Html.DisplayNameFor(model => model.DataCadastroPaciente)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.DataCadastroPaciente)
+            </dd>
+        </dl>
+
+        <div class="text-center mt-4">
+            <a class="btn btn-info mr-2" asp-controller="AnamneseModels" asp-action="Index" asp-route-idPaciente="@idPaciente">
+                <i class="fas fa-notes-medical"></i> Ver Anamneses
+            </a>
+            <a class="btn btn-warning mr-2" asp-action="Edit" asp-route-id="@Model?.IdPaciente">
+                <i class="fas fa-edit"></i> Editar
+            </a>
+            <a class="btn btn-secondary" asp-action="Index">
+                <i class="fas fa-arrow-left"></i> Voltar
+            </a>
+        </div>
+
+    </div>
